fix confiance container element in index page to align items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,4 +205,7 @@
 .body {
   color: #10131c; }
 
+.container-argument-confiance--index {
+  height: 600px; }
+
 /*# sourceMappingURL=style.css.map */
